# pub-quiz-back

./: .env  Cargo.toml  README.md
migrations/2022-09-11-160524_create_teams/: up.sql
src/: db.rs  main.rs  schema.rs
src/teams/: model.rs  routes.rs
