[package]
name = "pub-quiz-back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
actix-rt = "2.7.0"
chrono = { version = "0.4.22", features = ["serde"] }
dotenv = "0.15.0"
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "2.0.0"
env_logger = "0.9.0"
lazy_static = "1.4.0"
listenfd = "1.0.0"
log = "0.4.17"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
r2d2 = "0.8.10"
uuid = { version = "1.1.2", features = ["serde", "v4"] }